# ChapterVerse

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  verse_of_the_day.html  votd_config.toml
benches/: bible_benchmark.rs
bibles/: TEST.csv  biblecsvconversion.py  lsbbiblexmltocsvconversion.py
channels/: chapterverse.toml
lib/bible/: Cargo.toml
lib/bible/src/: lib.rs
lib/bible/src/scripture/: bible.rs  mod.rs
lib/twitch/: Cargo.toml
lib/twitch/src/: lib.rs
lib/twitch/src/chat/: client.rs  listener.rs  listeners.rs  mod.rs  replier.rs  writer.rs
lib/twitch/src/common/: channel_data.rs  message_data.rs  mod.rs  twitch_client.rs
lib/twitch/src/data/: channel_data.rs  message_data.rs  mod.rs
src/: main.rs
src/commands/: channelinfo.rs  commandprefix.rs  gospel.rs  help.rs  mod.rs  myinfo.rs  next.rs  previous.rs  random.rs  support.rs  translation.rs  votd.rs
src/helpers/: config.rs  config_manager.rs  env_variables.rs  import_bibles.rs  logging.rs  metrics.rs  mod.rs  print_color.rs  response_builder.rs  statics.rs  webscraper.rs
src/scripture/: bible.rs
