[package]
name = "chapterverse"
version = "2024.2.22"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "lib/bible",
    "lib/twitch",
]


[dependencies]
bible = { path = "lib/bible" }
twitch = { path = "lib/twitch" }
async-trait = "^0.1.77"
crossterm = "^0.27.0"

dotenv = "^0.15.0"
reqwest = { version = "^0.11.24", features = ["json"] }
strum = "^0.26.1"
strum_macros = "^0.26.1"
tokio = "^1.36.0"
lazy_static = "1.4.0"
regex = "1.10.3"

[dev-dependencies]
criterion = {version = "0.5.1", features = ["html_reports"]}

[[bench]]
name = "bible_benchmark"
harness = false
