[package]
name = "chapterverse"
version = "2024.5.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "lib/bible",
    "lib/twitch",
]


[dependencies]
bible = { path = "lib/bible" }
twitch = { path = "lib/twitch" }
crossterm = "^0.27.0"

dotenv = "^0.15.0"
reqwest = { version = "^0.11.24", features = ["json"] }
strum = "^0.26.1"
strum_macros = "^0.26.1"
tokio = "^1.36.0"
lazy_static = "1.4.0"
regex = "1.10.3"
async-trait = "0.1.79"
thiserror = "1.0.58"

futures = "0.3"
toml = "0.8.12"
serde = {version = "1.0.197", features =["derive"]}
chrono = { version = "0.4.37", features = ["serde"] }
sanitize-filename = "0.5.0"
serde_derive = "1.0.198"
serde_json = "1.0.117"

[dev-dependencies]
criterion = {version = "0.5.1", features = ["html_reports"]}

[build-dependencies]
toml_edit = "0.22.12"
chrono = "0.4.37"

[[bench]]
name = "bible_benchmark"
harness = false
