[package]
name = "chapterverse"
version = "2024.9.18"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "lib/bible",
    "lib/twitch",
]


[dependencies]
bible = { path = "lib/bible" }
twitch = { path = "lib/twitch" }
crossterm = "0.28.1"

dotenv = "^0.15.0"
reqwest = { version = "0.12.7", features = ["json"] }
strum = "^0.26.3"
strum_macros = "^0.26.4"
tokio = "^1.40.0"
lazy_static = "1.5.0"
regex = "1.10.6"
async-trait = "0.1.82"
thiserror = "1.0.63"

futures = "0.3"
toml = "0.8.19"
serde = {version = "1.0.210", features =["derive"]}
chrono = { version = "0.4.38", features = ["serde"] }
sanitize-filename = "0.5.0"
serde_derive = "1.0.210"
serde_json = "1.0.128"
dashmap = "6.1.0"
log = "0.4.22"
env_logger = "0.11.5"

[dev-dependencies]
criterion = {version = "0.5.1", features = ["html_reports"]}

[build-dependencies]
toml_edit = "0.22.21"
chrono = "0.4.38"

[[bench]]
name = "bible_benchmark"
harness = false
